--- a/class_projects/Koala_Site_2020/faq.html
+++ b/class_projects/Koala_Site_2020/faq.html
@@ -3,26 +3,30 @@
 <head>
 <!-- author: Sabarish Mogallapalli
 date: 01/21/2022 -->
-<style>
-    p{
-        text-align: none;
-    }
-</style>
 <meta charset="UTF-8">
 <meta name="description" content="Frequently Asked Questions Page for Koala Bear National Information Center">
 <meta name="keywords" content="koala bear, info center, foundation, donate, KBNIC, FAQ">
 <title>Frequently Asked Questions Page</title>
 <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mystructure.css">
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./Oswald/Oswald-VariableFont_wght.ttf">
+<style>
+    p{
+        text-align: none;
+    }
+</style>
 </head>
 <body>
+<div id="container">
 <header>
 <figure>
 <img src="images/koala_banner.jpg" alt="koala bear banner">
 <figcaption>Koala Bear Banner</figcaption>
 </figure>
 <h1>Frequently Asked Questions</h1>
+</header>
+
 <nav>
     <ul class="menu">
         <li><a href="./index.html">Home</a></li>
@@ -34,7 +38,8 @@ date: 01/21/2022 -->
         <li><a href="./contact.html">Contact Us</a></li>
     </ul>
 </nav>
-</header>
+
+<main>
 
 <section>
 
@@ -120,9 +125,11 @@ date: 01/21/2022 -->
 <p>Australian national laws protect koalas, but each individual state is responsible for the animal's conservation.</p>
 
 </section>
+</main>
+
 <footer>
-<p>&hearts; ® © Copyright 2018 All rights reserved. Australian Koala Foundation</p>
-<img src="images/koala_logo.svg" alt="koala logo" width="100" height="100"></img>
+<p class="front">&hearts; ® © Copyright 2018 All rights reserved. Australian Koala Foundation<img src="images/koala_logo.svg" alt="koala logo" width="40" height="40" class="border"></img></p>
 </footer>
+</div>
 </body>
 </html>
