--- a/class_projects/Koala_Site_2020/save_koalas.html
+++ b/class_projects/Koala_Site_2020/save_koalas.html
@@ -8,16 +8,20 @@ date: 01/21/2022-->
 <meta name="keywords" content="koala bear, info center, foundation, donate, KBNIC, help">
 <title>Help Save the Koala's Page</title>
 <link rel="stylesheet" href="mystyle.css">
+<link rel="stylesheet" href="mystructure.css">
 <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./Oswald/static/Oswald-Regular.ttf">
 </head>
 <body>
+<div id="container">
 <header>
 <figure>
 <img src="images/koala_banner.jpg" alt="koala bear banner">
 <figcaption>Koala Bear Banner</figcaption>
 </figure>
 <h1>Help Save the Koala's</h1>
+</header>
+
 <nav>
     <ul class="menu">
         <li><a href="./index.html">Home</a></li>
@@ -29,6 +33,8 @@ date: 01/21/2022-->
         <li><a href="./contact.html">Contact Us</a></li>
     </ul>
 </nav>
+
+<main>
 
 <p>There is currently no legislation, <strong class="standout">anywhere in the country</strong>, that can protect Koalas and Koala habitat in Australia. The listing of the koala as <em class="standout">“vulnerable”</em> under the <strong>Environmental Protection</strong> and <strong class="bold">Biodiversity Conservation Act in 2012</strong> changed nothing. This is supposed to be the premier law for protecting Australia’s environment, yet it is <strong><em>powerless</em></strong>. By the time you read this page the bulldozers may already be working, but it is not too late to take action. Below we have listed some of the things that might make a difference.</p>
 <p><img src="./images/pexels-international-fund-for-animal-welfare-5487067.jpg" alt="koala getting checked" height="400" width="600"></p>
@@ -46,7 +52,6 @@ date: 01/21/2022-->
 </ul>
 </nav>
 </section>
-</header>
 
 <section>
 <br>
@@ -76,9 +81,11 @@ date: 01/21/2022-->
 <br>
 
 </br>
+</main>
+
 <footer>
-<p>&hearts; ® © Copyright 2018 All rights reserved. Australian Koala Foundation</p>
-<img src="images/koala_logo.svg" alt="koala logo" width="100" height="100"></img>
+<p class="front">&hearts; ® © Copyright 2018 All rights reserved. Australian Koala Foundation<img src="images/koala_logo.svg" alt="koala logo" width="40" height="40" class="border"></img></p>
 </footer>
+</div>
 </body>
 </html>
