--- a/class_projects/Koala_Site_2020/save_koalas.html
+++ b/class_projects/Koala_Site_2020/save_koalas.html
@@ -28,8 +28,8 @@ date: 01/21/2022-->
         <li><a href="./faq.html">About Koalas</a></li>
         <li class="active"><strong>Save Koalas</strong></li>
         <li><a href = "KoalaFactSheet.pdf" target="_blank">Fun Fact Sheet</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="https://www.savethekoala.com/about-koalas/interesting-facts/" target="_blank">Adopt</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li><a href="./adopt.html">Adopt</a></li>
         <li><a href="./contact.html">Contact Us</a></li>
     </ul>
 </nav>
