--- a/homework.html
+++ b/homework.html
@@ -19,6 +19,7 @@ date: 01/26/2022 -->
     <li><a href="../wdv101/cocoa_site/cocoa_site/index.html">Link to cocoa site page</a></li>
     <li><a href="../wdv101/Koala_Site_2020/index.html">Link to koala site page</a></li>
     <li><a href="../wdv101/summit_site/index.html">Link to summit site page</a></li>
+    <li><a href="../wdv101/flexbox_layout/flexbox_layout.html">Link to flexbox layout page</a></li>
 </ul>
 </body>
 </html>
