--- a/class_projects/Koala_Site_2020/contact.html
+++ b/class_projects/Koala_Site_2020/contact.html
@@ -28,8 +28,8 @@ date: 03/10/2022 -->
         <li><a href="./faq.html">About Koalas</a></li>
         <li><a href="./save_koalas.html">Save Koalas</a></li>
         <li><a href = "KoalaFactSheet.pdf" target="_blank">Fun Fact Sheet</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li> <a href="https://www.savethekoala.com/about-koalas/interesting-facts/" target="_blank">Adopt</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li> <a href="./adopt.html">Adopt</a></li>
         <li class="active"><strong>Contact Us</strong></li>
     </ul>
 </nav>
