--- a/class_projects/Koala_Site_2020/faq.html
+++ b/class_projects/Koala_Site_2020/faq.html
@@ -15,6 +15,15 @@ date: 01/21/2022 -->
     p{
         text-align: none;
     }
+    main{
+        column-count: 3;
+        column-gap: 200px;
+        column-rule: 1px solid black;
+    }
+
+    h3{
+        column-span:all;
+    }
 </style>
 </head>
 <body>
@@ -28,24 +37,25 @@ date: 01/21/2022 -->
 </header>
 
 <nav>
+    <p><img src="./images/twokoalas.jpeg" width="200" length="200" class="floatRight"></p>
     <ul class="menu">
         <li><a href="./index.html">Home</a></li>
         <li class="active"><strong>About Koalas</strong></li>
         <li><a href="./save_koalas.html">Save Koalas</a></li>
         <li><a href = "KoalaFactSheet.pdf" target="_blank">Fun Fact Sheet</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li> <a href="https://www.savethekoala.com/about-koalas/interesting-facts/" target="_blank">Adopt</a></li>
+        <li><a href="./gallery.html">Gallery</a></li>
+        <li> <a href="./adopt.html">Adopt</a></li>
         <li><a href="./contact.html">Contact Us</a></li>
     </ul>
+    <p><img src="./images/pexels-valeriia-miller-2610309.jpg" alt="Koala Sitting Picture" width="378" height="504"></p>
 </nav>
 
+<h3>Common Questions Most People Ask Regarding Koalas:</h3>
 <main>
-
 <section>
 
 <h4>What does a Koala bear look like?</h4>
 <p>Koalas have soft, wool-like fur that is gray above and white below. Their fur is mostly white on the underside below the neck, and their ears have long white hairs on the tips. The koala resembles a bear, but is actually a marsupial, a special kind of mammal which carries its young in a pouch.</p>
-<p><img src="./images/pexels-valeriia-miller-2610309.jpg" alt="Koala Sitting Picture" width="378" height="504"></p>
 </section>
 
 <section>
@@ -66,7 +76,6 @@ date: 01/21/2022 -->
 
 <h4>What is the population of Koalas?</h4>
 <p>There are fewer than <strong class="bold">100,000 koalas</strong>.</p>
-
 </section>
 
 <section>
@@ -85,17 +94,8 @@ date: 01/21/2022 -->
 
 <section>
 
-<img src="./images/twokoalas.jpeg" width="100" length="100" class="floatRight">
-<h4>What type of environment do Koala's like?</h4>
-<p>Koalas prefer to live in <em class="standout">eucalyptus forests, coastal islands, and low woodlands</em>.</p>
-
-</section>
-
-<section>
-
 <h4>What do Koala's eat?</h4>
 <p>Koalas consume eucalyptus leaves and bark from <strong class="bold">12 different eucalyptus tree species</strong>. They also consume <em class="standout">mistletoe and box leaves</em>.</p>
-
 </section>
 
 <section>
@@ -125,6 +125,7 @@ date: 01/21/2022 -->
 <p>Australian national laws protect koalas, but each individual state is responsible for the animal's conservation.</p>
 
 </section>
+
 </main>
 
 <footer>
