--- a/class_projects/Koala_Site_2020/gallery.html
+++ b/class_projects/Koala_Site_2020/gallery.html
@@ -8,8 +8,9 @@
             Author: Sabarish Mogallapalli
             Date: 4/8/22
             -->
-         <meta name="description" content="Adopt Page for Koala Bear National Information Center">
+         <meta name="description" content="Gallery Page for Koala Bear National Information Center">
          <meta name="keywords" content="koala bear, info center, foundation, donate, KBNIC, adopt, adopt koala, koala, pet">
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
          
          <link rel="stylesheet" href="mystyle.css">
          <link rel="stylesheet" href="mystructure.css">
@@ -31,6 +32,19 @@
                 vertical-align: middle;
                 width: 90%;
             }
+
+        @media only screen and (max-width: 700px){
+            .column{
+                flex-direction: column;
+            }
+            #container{
+                width:100%;
+            }
+            body{
+                background-color:azure;
+            }
+        }
+
         </style>
     </head>
     <body>
