--- a/class_projects/flexbox_layout/flexbox_layout.html
+++ b/class_projects/flexbox_layout/flexbox_layout.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox Layout Demo</title>
-    <link href="flexbox_layoutCSS.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./flexbox_layoutCSS.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="container">
