--- a/class_projects/Koala_Site_2020/adopt.html
+++ b/class_projects/Koala_Site_2020/adopt.html
@@ -10,6 +10,7 @@
 	-->
  <meta name="description" content="Adopt Page for Koala Bear National Information Center">
  <meta name="keywords" content="koala bear, info center, foundation, donate, KBNIC, adopt, adopt koala, koala, pet">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
  <!-- REMEMBER TO ADD YOUR CSS FILE LINKS!-->
  <link rel="stylesheet" href="mystyle.css">
@@ -100,7 +101,19 @@ section  {
 legend{
     font-weight: bold;
     font-family:'League Spartan', sans-serif;
-}           
+}
+
+@media only screen and (max-width: 700px){
+            .column{
+                flex-direction: column;
+            }
+            #container{
+                width:100%;
+            }
+            body{
+                background-color:azure;
+            }
+}
 	</style>
 	
 </head>
